<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.dtek.portal.ui.activity.login.LoginActivityVM" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/login_activity_margin"
                android:layout_marginEnd="@dimen/login_activity_margin"
                android:background="@color/colorWhite"
                app:srcCompat="@drawable/ic_help"
                android:visibility="@{viewModel.help ? View.VISIBLE : View.GONE, default=gone }"
                android:onClick="@{() -> viewModel.showFaq()}"
                tools:visibility="visible"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/login_activity_margin"
                android:paddingEnd="@dimen/login_activity_margin"


                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:layout_width="@dimen/ic_logo_width"
                    android:layout_height="@dimen/ic_logo_height"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:src="@drawable/ic_logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_text_grey">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_hint_login"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/color_text_grey"
                        android:textSize="@dimen/text_size_normal"
                        android:theme="@style/MyEditTextTheme"
                        android:text="@={viewModel.login}"
                        tools:text="test" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/MyMainButtonStyle"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:onClick="@{() -> viewModel.getAuth()}"
                    android:text="@string/btn_sms" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"

                    android:textColor="@color/color_text_grey"
                    android:textSize="@dimen/text_size_small"
                    android:text="@{viewModel.loginFAQ.sms}"
                    tools:text="@string/text_sms_code" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="@{viewModel.progress ? View.VISIBLE : View.GONE, default=gone }"
                    tools:visibility="visible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_text_grey"
                    android:visibility="@{viewModel.smsCode ? View.VISIBLE : View.GONE, default=gone }"
                    tools:visibility="visible">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_hint_sms"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textColor="@color/color_text_grey"
                        android:textSize="@dimen/text_size_normal"
                        android:theme="@style/MyEditTextTheme"
                        android:text="@={viewModel.signCode}"
                        app:requestFocus="@{viewModel.accessCodeRequestFocus}"
                        tools:text="000000"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/MyMainButtonStyle"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/btn_enter"
                    android:onClick="@{() -> viewModel.signIn()}"
                    android:enabled="@{viewModel.signEnable}"
                    />

                <Button
                    style="@style/MyMainButtonStyle"
                    android:background="@drawable/btn_ripple_background_grey"
                    android:text="@string/btn_enter_without_registration"
                    android:onClick="@{() -> viewModel.logInWithoutRegistration()}"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
