<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="navigation"
            type="com.dtek.portal.ui.activity.main.MainActivityVM" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_layout_height"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_light_blue_bg"

            android:clickable="true"
            android:focusable="true"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toLeftOf="@+id/nav_media"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                style="@style/MyToggleButtonStyle"
                android:textOff="@string/title_news"
                android:textOn="@string/title_news"
                android:background="@color/color_light_blue_bg"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_current_choose_item"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_media"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_light_blue_bg"

            android:clickable="true"
            android:focusable="true"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toRightOf="@+id/nav_news"

            app:layout_constraintRight_toLeftOf="@+id/nav_services"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewNavigationStyle"

                android:text="@string/title_media"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_current_choose_item"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_services"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@{navigation.isLogin ? @color/color_light_blue_bg : @color/color_grey_bg}"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toRightOf="@+id/nav_media"
            app:layout_constraintRight_toLeftOf="@+id/nav_add"
            app:layout_constraintTop_toTopOf="parent"

            android:onClick="@{() -> navigation.onClickServices()}"

            >

            <TextView
                style="@style/TextViewNavigationStyle"

                android:text="@string/title_service"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:background="@{navigation.isLogin ? @color/color_service_item : @color/color_grey_bg}"

            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintLeft_toRightOf="@+id/nav_services"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:onClick="@{() -> navigation.onClickServicesAdd()}"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_plus"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>